tests/conformance/valid/references.hedl
%VERSION: 1.0
%STRUCT: T: [id,ref]
---
d: @T
  |a,~
  |b,@a
