tests/conformance/invalid/odd_indentation.hedl
%VERSION: 1.0
---
a:
   b: 1
